--- a/navbar.css
+++ b/navbar.css
@@ -1,499 +1,522 @@
 @import url(https://fonts.google.com/specimen/Baloo+2?query=baloo+);
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-:root{
-    --main-bg-color:brown;
+
+:root {
+    --main-bg-color: brown;
 }
-.max-width-1{
-max-width: 80vw;
+
+.max-width-1 {
+    max-width: 80vw;
 }
-.max-width-2{
-    max-width: 60vw;
-    }
-    .m-auto{
-        margin: auto;
-    }
-    
-    .my-2{
-        margin-bottom:12px ;
-        margin-top: 12px;
-    }
-.navigation{
-background-color: rgb(212, 199, 199);
-margin-top: 25px;
-height: 74px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 5px;
+
+.m-auto {
+    margin: auto;
+}
+
+.my-2 {
+    margin-bottom: 12px;
+    margin-top: 12px;
+}
+
+.navigation {
+    background-color: rgba(0,0,0,0.9);
+    height: 74px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    color: white;
 
 }
-.nav-left span{
+
+.nav-left span {
     font-size: 20px;
     font-weight: bold;
-    font-family: "baloo",sans-serif;
-}
-.nav-left {
-font-size: 20px;
-display: flex;
+    font-family: "baloo", sans-serif;
+    margin-left: 5px;
 }
 
-.contentleft{
-/* width: 50%; */
+.nav-left {
+    font-size: 20px;
     display: flex;
-    /* align-items: center; */
+}
+
+.contentleft {
+    display: flex;
     justify-content: center;
     flex-direction: column;
     padding: 50px;
     z-index: 1;
 }
-.contentleft p{
+
+.contentleft p {
     padding: 10px;
 }
-.contentright{
-    /* width: 50%; */
+
+.contentright {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* z-index: 1; */
-
-
 }
-.contentright img{
+
+.contentright img {
     height: 300px;
     width: 300px;
     border: 2px solid black;
     border-radius: 200px;
 }
-.content{
-/* background-color:rgb(208,208,243); */
-height: 395px;
-display: flex;
-margin-top: 32px;
-padding: 9px;
-position: relative;
+
+.content {
+    height: 395px;
+    display: flex;
+    /* margin-top: 32px; */
+    /* padding: 9px; */
+    position: relative;
 }
-.content::after{
+
+.content::after {
     content: "";
-    background-image:url('./images/design.jpg');
+    background-image: url('./images/design.jpg');
     position: absolute;
     width: 100%;
     height: inherit;
     opacity: 0.15;
     border-radius: 12px;
 }
-.footer{
-background-color: blueviolet;
-height: 150px;
+
+.footer {
+    background-color:black;
+    /* background-color: rgb(240, 226, 237); */
+
+    height: 150px;
 }
 
-.navbar{
-    width: 100%;
-    background-color:pink;
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.nav-left ul{
+.nav-left ul {
     display: flex;
     align-items: center;
     margin: 0 77px;
     font-size: 18px;
-    font-family: "baloo",sans-serif;
-    /* font-weight: bold; */
+    font-family: "baloo", sans-serif;
+    color: white;
 }
-.nav-left ul li{
+
+.nav-left ul li {
     list-style-type: none;
     display: flex;
     margin: 0 14px;
     transition: all 0.3s ease-in-out;
-
+    color: white;
 
 }
-a{
+
+a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
-a:hover{
-    color: blue;
-    /* font-weight: bolder; */
+
+a:hover {
+    color: gray;
 }
-form{
+
+form {
     margin-right: 40px;
     margin-bottom: 10px;
     margin-top: 5px;
-    /* justify-content: flex-end;
-    margin: 700px; */
     float: right;
     padding: 3px 5px;
 }
-.forminput{
+
+.forminput {
     padding: 3px 5px;
-    /* font-size: 16px; */
     border: 2px solid black;
     border-radius: 9px;
-    margin:0 13px;
+    margin: 0 13px;
 }
-.btn{
+
+.btn {
     padding: 3px;
-     border:3px solid black;
+    border: 3px solid black;
     border-radius: 9px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    
-} 
-.btn:hover{
+
+}
+
+.btn:hover {
     color: white;
-background-color: var(--main-bg-color);
+    background-color: var(--main-bg-color);
 }
- .home-articles{
-height: 200px;
-background-color: rgb(241, 235, 239);
-/* padding-top: 12px; */
-padding: 18px;
-/* margin-top: 23px; */
-} 
-.box{
-    border: 2px solid black;
-}
-.home-articles1{
-    background-color: rgb(241, 235, 239);
+
+.home-articles {
+    height: 200px;
+    /* background-color: rgb(241, 235, 239); */
     padding: 18px;
-/* margin-top: 23px; */
-
 }
-.home-articles2{
-    background-color: rgb(241, 235, 239);
+
+.box {
+    /* border: 2px solid black; */
+}
+
+.home-articles1 {
+    /* background-color: rgb(241, 235, 239); */
     padding: 18px;
-/* margin-top: 23px; */
 
 }
 
-.home-article-img img{
+.home-articles2 {
+    /* background-color: rgb(241, 235, 239); */
+    padding: 18px;
+
+}
+
+.home-article-img img {
     width: 300px;
     border: 2px solid purple;
 }
-.home-article{
+
+.home-article {
     display: flex;
-    /* align-self: center; */
-    /* margin: 25px; */
+    box-shadow: 0px 2px 8px rgba(0,0,0,0.15);
+
 }
-.home-article-content{
-    /* align-self: center; */
+
+.home-article-content {
+margin-top: 10px;
     padding: 0px 25px;
 }
-.home-article-content p{
+
+.home-article-content p {
     padding-bottom: 30px;
 }
-.home-article-content h3{
+
+.home-article-content h3 {
     margin-bottom: 15px;
 }
-.home-articles1 h2{
+
+.home-articles1 h2 {
     margin-bottom: 20px;
 }
-.side{
+
+.side {
     background-color: rgb(240, 226, 237);
     height: 400px;
     position: relative;
     display: flex;
     padding: 12px;
-   justify-content: center;
-   
+    justify-content: center;
     margin-top: 15px;
 
 }
 
-.left-sign{
+.left-sign {
     width: 50%;
     float: left;
 }
-.left-sign h1{
+
+.left-sign h1 {
     padding-left: 80px;
     padding-top: 100px;
 }
-.left-sign p{
+
+.left-sign p {
     padding-left: 80px;
     padding-top: 20px;
 }
-.button{
+
+.button {
     padding-left: 80px;
     padding-top: 40px;
 }
 
-.button button{
+.button button {
     background: transparent;
     padding: 5px;
     margin: 20px;
-   
-
 }
 
-.button button:hover{
+.button button:hover {
     color: beige;
     background-color: black;
     cursor: pointer;
 }
-.rightbar{
+
+.rightbar {
     width: 50%;
-    /* float: right; */
-    /* margin-left: 900px; */
-    /* padding-bottom: 70px; */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* justify-content: center; */
-
 }
-.rightbar h2{
-        margin-left: 240px;
-        margin-top: 60px;
-        margin-bottom: 20px;
 
+.rightbar h2 {
+    margin-left: 240px;
+    margin-top: 60px;
+    margin-bottom: 20px;
 }
-.category ul li{
+
+.category ul li {
     margin-left: 100px;
-list-style: none;
-padding: 10px;
-background-color: rgb(73, 139, 165);
-margin-top: 8px;
-margin-bottom: 8px;
-align-items: center;
-text-align: center;
-color: white;
-font-weight: bold;
-font-size: 18px;
-/* display: flex; */
-border-radius: 20px;
-border: 1px solid black;
+    list-style: none;
+    padding: 10px;
+    background-color: black;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px solid black;
 
 }
-.category ul li:hover{
+
+.category ul li:hover {
     cursor: pointer;
-    background-color: blue;
+    background-color:gray;
 }
-.category ul li a:hover{
-    color: white;
+
+.category ul li a:hover {
+    color: black;
 }
-.signing{
+
+.signing {
     background-color: rgb(240, 226, 237);
     height: 350px;
     position: relative;
     display: flex;
-    /* margin-top: 32px; */
-    /* padding: 12px; */
-   /* justify-content: center; */
-    /* flex-direction: column; */
-    /* padding: 5 */ 
+
     margin-top: 15px;
 }
-.signup{
+
+.signup {
     width: 50%;
     padding-left: 40px;
-    /* float: left; */
 }
 
 
- .signup h1{
+.signup h1 {
 
     padding-left: 40px;
     padding-top: 80px;
 }
-.signup p{
-    /* padding: 50px; */
+
+.signup p {
     padding-left: 40px;
     padding-top: 20px;
     padding-bottom: 30px;
-} */
-.google{
+}
+
+.google {
     margin: 0 13px;
     padding: 5px;
     padding: 3px 5px;
     padding-left: 50px;
 }
-.mail button{
-    /* padding-left: 80px; */
+
+.mail button {
     margin: 0 13px;
     padding: 5px;
     background-color: black;
     color: white;
 
 }
-.mail input{
+.mail{
+    padding-left: 27px;
+}
+
+.mail input {
     padding: 5px 5px;
     border: 2px solid black;
-    /* padding-left: 50px; */
 
 }
-.signimg{
-    /* width: 50%; */
+
+.signimg {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-right: 100px; */
-    /* z-index: 1; */
-padding-right: 200px;
+    /* width: 200px; */
+
+    padding-right: 200px;
 
 }
-.mail{
-    /* padding-left: 50px; */
-}
-.signimg img{
-    /* padding-bottom: 200px; */
+
+.signimg img {
     display: flex;
     float: right;
     margin-left: 250px;
     height: 200px;
-    width: 200px;
+    width: 400px;
     border: 2px solid black;
-    /* border-radius: 200px; */
-    /* padding-right: 100px; */
 }
- .homearticles::after{
+
+.homearticles::after {
     content: "";
-    background-image:url('article5.jpg');
+    background-image: url('article5.jpg');
     position: absolute;
     width: 100%;
     height: inherit;
     opacity: 0.25;
-} 
-.trending{
-    /* background-color: aqua;s */
-    height: 1050px;
-    margin-top: 20px;
+}
 
+.intro {
+    /* background-color: antiquewhite; */
 }
-.sample{
-    box-shadow: 30px black;
-}
-.intro h1{
+
+.intro h1 {
     text-align: center;
     padding: 10px;
-    font-family: "baloo",sans-serif;
+    font-family: "baloo", sans-serif;
 }
-.intro h3{
-    text-align: center;
-    padding: 10px;
-}
-.intro h2{
+
+.intro h3 {
     text-align: center;
     padding: 10px;
 }
 
-.field fieldset{
-    /* width: 200px; */
+.intro h2 {
+    text-align: center;
+    padding: 10px;
+}
+
+.field fieldset {
     display: grid;
-    /* margin-top: 0; */
-    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* height: 400px; */
 
 }
-.field header{
+
+.field header {
     font-weight: bold;
     color: blue;
 }
 
-fieldset{
-    height: 800px;
+fieldset {
+    height: 300px;
     width: 200px;
     margin: 50px;
     display: flex;
     align-content: center;
-    /* margin-left: 80px; */
     float: right;
     padding: 20px;
-    gap: 40px;
-    box-shadow: 5px black;
-    border: 2px solid black;
+    margin-top: 10px;
+    
+    border: none;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.15);
+
 }
-.trendings{
-    height: 930px;
+
+.trendings {
+    height: 800px;
+    /* background-color: rgb(226, 225, 202); */
 }
-.trendings fieldset{
+
+.trendings fieldset {
     margin-top: 0;
 }
-.leftfooter{
+
+.leftfooter {
     margin: 0;
     padding: 0;
 }
-.row{
+
+.row {
     display: flex;
 }
+
 .row ul {
     list-style: none;
     display: flex;
     margin-left: 560px;
 
-    /* text-align: center; */
-    /* margin: 0 77px; */
 
 }
+
 .leftfooter ul li a {
-    /* list-style: none; */
     display: flex;
-    /* text-align: center; */
-    /* margin: 0 50px; */
+
     padding: 10px 20px;
     font-size: 30px;
 
 }
-.rightfooter{
+
+.rightfooter {
     display: flex;
-    /* margin: auto; */
 }
-.rightfooter ul{
-display: flex;
-list-style: none;
-padding-top: 20px;
-margin-left: 400px;
-padding-bottom: 20px;
-/* text-align: center; */
-/* width: 300px;
-height: 30px;
-margin: auto; */
+
+.rightfooter ul {
+    display: flex;
+    list-style: none;
+    padding-top: 20px;
+    margin-left: 400px;
+    padding-bottom: 20px;
+
 }
-.rightfooter ul a{
+
+.rightfooter ul a {
     padding: 0px 15px;
     font-size: 18px;
-    font-family: "baloo",sans-serif;
+    font-family: "baloo", sans-serif;
 }
-.quicklinks{
+
+.quicklinks {
     padding: 10px;
     text-align: center;
     font-weight: bold;
+    color: white;
 }
-.trending::after{
-    content: "";
-    background-image:url('./images/article.4.jpg');
-    position: absolute;
-    width: 80%;
-    height: inherit;
-    opacity: 0.15;
-    border-radius: 12px;
-}
-.trendings::after{
-    content: "";
-    background-image:url('./images/design.jpg');
-    position: absolute;
-    width: 80%;
-    height: inherit;
-    opacity: 0.15;
-    border-radius: 12px;
-}
-.field footer{
-    color: brown;}
 
-.container1{
+.field footer {
+    color: brown;
+    margin-top: 30px;
+}
+
+.container1 {
     width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fit);
     grid-gap: 20px;
 }
-.box50{
+
+
+
+.box3 {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.card {
+    width: 250px;
+    text-align: center;
+    margin-top: 30px;
+
+    box-shadow: 10px 10px 10px 0px rgba(0,0,0,0.15);
+}
+
+.card img {
+    width: 100%;
     height: 200px;
-    color: rgb(10, 10, 10);
-    border: 1px solid gray;
-    position: relative;
+}
+
+.text {
+    padding: 10px;
+    background-color:black;
+color: white;
+}
+
+.play80 {
+    /* background-color: rgb(235, 235, 241); */
+    height: 440px;
+    margin-top: 20px;
+
+}
+.play80 h1{
+    font-family: "baloo",sans-serif;
+    text-align: center;
+}
+.text:hover{
+    cursor: pointer;
+    background-color: aqua;
+    color: black;
 }
